# raisin_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml  update_interfaces.py
config/: params.yaml
launch/: raisin_bridge_launch.py
raisin_bridge/: CMakeLists.txt  package.xml
raisin_bridge/config/: params.yaml
raisin_bridge/include/raisin_bridge/: raisin_bridge.hpp
raisin_bridge/launch/: raisin_bridge_launch.py
raisin_bridge/src/: main.cpp  raisin_bridge.cpp
src/: CMakeLists.txt  package.xml  publisher_member_function.cpp  raisin_bridge.cpp
src/templates/: CMakeLists.txt  conversion.cpp  conversion.hpp  package.xml
src/templates/helper/: CMakeLists.txt  conversion.cpp  conversion.hpp  package.xml
src/templates/interfaces/: CMakeLists.txt  conversion.hpp  conversion_hpp_register  package.xml
templates/: CMakeLists.txt.in  package.xml.in
templates/conversions/: CMakeLists.txt.in  conversion.cpp.in  conversion.hpp.in  conversion_cpp_register  conversion_hpp_register  conversion_msg.cpp.in  conversion_msg.hpp.in  conversion_srv.cpp.in  conversion_srv.hpp.in  package.xml.in
templates/interfaces/: CMakeLists.txt.in  package.xml.in
